--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   mashiro_option.email_name = "";
   mashiro_option.cookie_version_control = "";
   mashiro_option.qzone_autocomplete = false;
-  mashiro_option.site_name = "walkingRoach行走的小强";
-  mashiro_option.author_name = "行走的小强";
+  mashiro_option.site_name = "ZjutRobot@Home";
+  mashiro_option.author_name = "ZjutRobot";
   mashiro_option.site_url = "https://walkingroach.cn";
   mashiro_option.v_appId = "rolYTdPf5QSAa7N9mQCKdoib-gzGzoHsz";
   mashiro_option.v_appKey = "HouV9sGpWd1Aki8HjePkCpag";
