--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <span class="site-title">
         <span class="logolink moe-mashiro">
           <a href="/">
-            <span class="sakurasono">walkingRoach</span>
-            <span class="shironeko">行走的小强</span>
+            <span class="sakurasono">ZjutRobot@Home</span>
+            <span class="shironeko">AI</span>
           </a>
         </span>
       </span>
