--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   /*End of Initial Variables*/
   </script>
   <script type="text/javascript">
-  var bg = "https://cdn.jsdelivr.net/gh/walkingRoach/cdn@1.0/img/cover/(1).jpg.webp".split(",");
+  var bg = "/images/cover/(1).jpg.webp".split(",");
   var bgindex = Math.floor(Math.random()*bg.length);
   if (!!window.ActiveXObject || "ActiveXObject" in window) { //is IE?
     alert('朋友，IE浏览器未适配哦~');
