--- a/comment/index.html
+++ b/comment/index.html
@@ -360,8 +360,8 @@
         <div class="reward-open">赏
           <div class="reward-main">
             <ul class="reward-row">
-              <li class="alipay-code"><img src="https://cdn.jsdelivr.net/gh/walkingRoach/cdn@1.0/img/custom/donate/AliPayQR.jpg"></li>
-              <li class="wechat-code"><img src="https://cdn.jsdelivr.net/gh/walkingRoach/cdn@1.0undefined"></li>
+              <li class="alipay-code"><img src="https://ChenZjut.github.io/images/cover/AliPayQR.jpg"></li>
+              <li class="wechat-code"><img src="https://ChenZjut.github.io/images/cover/Wechatpay.jpg"></li>
             </ul>
           </div>
         </div>
